5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1708_3063.log
== TEST (2019-04-29 15:16:24) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if (d > 8 or d < 1) or (y != a) or (y != b) or (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:42) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if (d > 8 or d < 1) or (y != a) or (y != b) or (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:25) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if (d > 8 or d < 1) or (y != a) or (y != b) or (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:18:25) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) or (y != b) or (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.139306
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:26) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) or (y != b) or (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:46) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) or (y != b) or (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:23) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or y != and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- ERROR:
File "XXXX", line 9
    if d > 8 or d < 1 or y != and (y != b) and (y != c):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:34) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:19:48) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.192942
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:19:54) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:19:55) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.192388
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:20:00) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:20:20) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:20:31) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.136336
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:20:54) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.160153
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:27:33) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.149937
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:27:47) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x < 200 and x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x < 100 and x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:37) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:28:39) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.155562
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:28:41) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:12) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ")
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:28) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:30:52) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:51) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:12) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 16
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:28) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:32:52) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.197721
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:53) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:18) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:34:53) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == b:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:35:14) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == c:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- OUTPUT:
PO insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:32) 
-- CODE:
x = int(input("PO: "))
y = input("Armadura: ").upper()
d = int(input("Dado:(1/8) "))

a = "INTEIRA"
b = "MALHA"
c = "PLACA"

if d > 8 or d < 1 or (y != a) and (y != b) and (y != c):
	print("Entrada invalida")
elif y == a:
	if x >= 200:
		r = (30 * d) - 20
		print(r)
	else:
		print("PO insuficiente")
elif y == c:
	if x >= 100:
		r = (20 * d) - 18
		print(r)
	else:
		print("PO insuficiente")
else:
	if x >= 50:
		r = (15 * d) - 1
		print(r)
	else:
		print("PO insuficiente")
-- EXECUTION TIME:
0.13864
-- TEST CASE 1:
---- input:
-2
INTEIRA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 2:
---- input:
8
MALHA
8
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
56
MALHA
5
---- correct output:
74
---- user output:
74
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
